# recipes

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  urls.py
recipes/: admin.py  models.py  services.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_alter_ingredient_product_alter_ingredient_recipe.py
recipes/templates/recipes/: base.html  recipe_list.html
users/: models.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
