[tool.poetry]
name = "recipe-book"
version = "0.1.0"
description = ""
authors = ["Maxim Donchuk <m.donchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
django-environ = "^0.11.2"
django-crispy-forms = "^2.1"
django-cors-headers = "^4.3.1"
crispy-bootstrap5 = "^2023.10"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
